<resources>
    <string name="app_name">Skripsi Lansiaku</string>
    <string name="heroes_name">Nama Dokter</string>
    <string name="description">Spesialis</string>
    <string name="jadwal">Jadwal Dokter</string>
    <string name="jam">20.00-21.00</string>
    <string name="km">1.8 km</string>
    <string name="rating">4.8 (210 Rates)"</string>
    <string name="harga">Rp. 300.000"</string>
    <string name="rumahsakit">Rumah Sakit</string>
    <string name="alamat">Alamat</string>
    <string name="NamaKamar">Nama Kamar</string>
    <string name="Tersedia">Tersedia</string>
    <string name="Terpakai">Terpakai</string>
    <string name="HargaKamar">Harga Kamar</string>
    <string name="diabetes">Diabetes adalah penyakit kronis yang ditandai dengan tingginya kadar gula darah (glukosa) di dalam tubuh karena tubuh tidak mampu memproduksi hormon insulin yang cukup atau tidak merespons kerja hormon insulin (resistensi insulin).\n\nPada dasarnya, diabetes adalah penyakit yang bisa dialami oleh siapa saja, namun cenderung lebih rentan terjadi pada orang lanjut usia (lansia). Bahkan, jika tidak segera ditangani dengan tepat, diabetes pada lansia cenderung lebih berisiko untuk menimbulkan sejumlah komplikasi serius, seperti kerusakan saraf serta gangguan pada fungsi ginjal, fungsi penglihatan, hingga fungsi jantung.\n\nLantas, apa saja gejala diabetes pada lansia yang perlu diwaspadai dan bagaimana cara mengendalikannya? Mari cari tahu jawabannya melalui artikel berikut ini.\n\nMenjalani Pola Makan Tepat, Lakukan Aktivitas Fisik Sederhana,Lakukan Pengecekan Kadar Glukosa Secara Rutin"</string>
    <string name="jantung">Penuaan atau pertambahan usia menyebabkan jantung dan pembuluh darah menjadi kaku. Ini menjadi risiko dari penyakit jantung koroner.\n\n Tetapi usia bukan satu-satunya faktor risiko jantung koroner karena ada pemicu lainnya. Menurut American College of Cardiology, penyakit jantung koroner paling sering dialami lanjut usia (lansia) berusia di atas 75 tahun. Seiring bertambahnya usia, denyut jantung menurun karena perubahan kemampuan jantung dalam memompa. Ditambah fungsi dan mobilitas yang berkurang membuat otot lansia melemah. Kondisi ini semakin buruk jika di usia muda, mereka tidak menerapkan hidup sehat melalui pola makan dan olahraga.\n\nSeiring bertambah usia terjadi perubahan pada komponen struktural di arteri, termasuk berkurangnya elastisitasnya. Pembuluh darah tua akan mengalami penurunan dalam menampung darah dipompa dari jantung.\n\nSelain penuaan, pemicu kain penyakit jantung koroner antara lain kolesterol LDL tinggi, kolesterol HDL rendah, tekanan darah tinggi, riwayat keluarga, diabetes, merokok, dan obesitas. Bisa juga, penyakit jantung koroner telah dimulai sejak kanak-kanak yang akhirnya dirasakan seiring pertambahan usia.\n\nPenyumbang terbesar dalam perkembangan penyakit jantung koroner adalah gaya hidup. Penyakit ini bisa dihindari dengan gaya hidup sehat  didukung konsumsi nutrisi baik, manajemen berat badan, dan menjadikan aktivitas fisik sebagai rutinitas</string>
    <string name="stroke">Ini adalah situasi darurat yang terjadi ketika aliran darah ke otak terhenti. Perlu diketahui, otak membutuhkan pasokan oksigen dan nutrisi yang konstan agar dapat bekerja dengan baik.\n\nJika suplai darah dihentikan bahkan untuk waktu yang singkat, ini dapat menyebabkan masalah. Sel-sel otak mulai mati setelah hanya beberapa menit tanpa darah atau oksigen.\n\nHal-Hal yang Jadi Faktor Risiko Stroke pada Lansia\n\nAda banyak hal yang bisa meningkatkan risiko stroke pada lansia. Beberapa di antaranya ada yang bisa diubah, tapi ada pula yang tidak. Berikut ini beberapa faktor risikonya:\n\nTekanan Darah Tinggi:\nTekanan darah tinggi atau hipertensi merupakan salah satu penyebab paling umum dari stroke. Tekanan darah 140/90 atau lebih tinggi dapat merusak pembuluh darah (arteri) yang menyuplai darah ke otak.\n\nPenggunaan Tembakau:\nMerokok atau mengunyah tembakau dapat meningkatkan risiko stroke pada lansia. Hal ini karena nikotin membuat tekanan darah naik. Asap rokok juga menyebabkan penumpukan lemak di arteri utama di leher. Ini juga mengentalkan darah dan membuatnya lebih rentan membeku.\n\nBahkan, menjadi perokok pasif atau menghirup asap rokok saja juga dapat memengaruhi. Jadi, sebaiknya hindari kebiasaan merokok dan jauhi asap rokok jika kamu tidak merokok.\n\nMengidap Penyakit Jantung:\nRisiko stroke juga bisa meningkat pada lansia yang mengidap penyakit jantung. Seperti katup jantung yang rusak serta fibrilasi atrium, atau detak jantung tidak teratur.\n\nPenyakit jantung nyatanya merupakan faktor risiko terpenting kedua untuk penyakit stroke. Ia juga menjadi penyebab utama kematian di antara mereka yang selamat dari stroke. Penyakit jantung dan stroke memiliki banyak faktor risiko yang sama.\n\nDiabetes:\nOrang yang memiliki penyakit diabetes sering memiliki tekanan darah tinggi dan lebih cenderung kelebihan berat badan. Keduanya meningkatkan kemungkinan stroke.\n\nSelain itu, diabetes juga dapat merusak pembuluh darah, yang membuat stroke lebih mungkin terjadi. Jika seseorang mengalami stroke saat kadar gula darah tinggi, risiko cedera pada otak jadi lebih besar.\n\nKelebihan Berat Badan dan Kurang Gerak\nPeluang stroke pada lansia juga mungkin meningkat jika kelebihan berat badan. Namun, risiko bisa diturunkan dengan mengubah gaya hidup dan berolahraga secara teratur setiap harinya.\n\nPenggunaan Obat-obatan:\nBeberapa obat dapat meningkatkan peluang seseorang terkena stroke. Misalnya, obat pengencer darah, yang disarankan dokter untuk mencegah pembekuan darah, terkadang dapat membuat stroke lebih mungkin terjadi melalui pendarahan.\n\nPenggunaan terapi hormon untuk gejala menopause seperti hot flashes juga sering dikaitkan dengan risiko stroke yang lebih tinggi. Estrogen dosis rendah dalam pil KB juga dapat meningkatkan risiko.\n\nUsia:\nSiapapun bisa terkena stroke, bahkan bayi dalam kandungan. Namun umumnya, risiko penyakit ini meningkat seiring bertambahnya usia. Bahkan berlipat ganda setiap dekade setelah usia 55 tahun.\n\nRiwayat Keluarga:\nStroke dapat diturunkan dalam keluarga. Kamu dan kerabat mungkin memiliki risiko yang sama untuk terkena tekanan darah tinggi atau diabetes. Beberapa stroke juga bisa terjadi akibat kelainan genetik yang menghalangi aliran darah ke otak.\n\nJenis Kelamin:\nWanita sedikit lebih kecil kemungkinannya untuk mengalami stroke dibandingkan pria pada usia yang sama. Namun, wanita tetap dapat mengalami stroke di usia yang lebih tua.Itulah beberapa faktor risiko stroke pada lansia yang perlu diwaspadai. Jika kamu memiliki faktor risiko, segera ubah gaya hidup menjadi lebih sehat.</string>
    <string name="hipertensi">Hipertensi merupakan penyakit yang memang muncul seiring bertambahnya usia seseorang. Karena itu, lansia disarankan untuk terus mengontrol tekanan darahnya hingga tidak mengalami hipertensi. Jika tidak, maka hipertensi bisa menimbulkan berbagai risiko penyakit mulai dari stroke, hingga gangguan penglihatan.\n\nBerikut adalah tips mengatasi hipertensi yang disampaikan dr. Roza Mulyana, SpPD, K-Ger, FINASIM, pada acara Kelas Lansia Online, bertajuk Lansia, Hipertensi dan Solusinya, yang diselenggarakan oleh Geriatri.id, bekerjasama dengan Pergemi.\n\n1. Menjaga Berat Badan:\nMenjaga berat badan ideal merupakan salah satu cara efektif mencegah hipertensi. Setiap penurunan berat badan sebesar 10 kg akan menurunkan tekanan darah sistolik hingga 5-10 mmHg.\n\n2. Stop Merokok\nTidak hanya darah tinggi, untuk mencegah semua, kebiasan merokok harus dihentikan karena banyaknya akibat buruk dari merokok.\n\n3. Olahraga Secara Teratur\nOlahraga yang ideal dilakukan 3-5 kali per minggu dengan durasi selama 30 menit setiap kali berolahraga. Olahraga dapat menurunkan tekanan darah jika dilakukan secara rutin. Bagi lansia harus diperhatikan, pilihan jenis olahraga sesuai kondisi tubuh.\n\nYang terbaik adalah yang bersifat aerobik seperti jalan kaki, berenang, dan bersepeda. Namun jika ada rematik di lutut, disarankan memilih olahrgaa renang dan bersepeda selama 30 menit.\n\n4. Kurangi Konsumsi Garam\nOrang berusia lanjut sangat sensitif terhadap garam, karena kelebihan konsumsi garam sedikit saja dapat meningkatkan tekanan darah. Jumlah maksimal konsumsi garam yang disarankan per hari adalah tidak lebih dari 1 sendok teh.</string>
    <string name="hidupsehat">Menciptakan rumah aman untuk lansia penting dilakukan, terutama bila Anda sedang merawat lansia. Hal ini karena kondisi fisik yang melemah dan fungsi tubuh yang menurun membuat lansia rentan mengalami cedera dan terkena gangguan kesehatan. \n\nMemasuki usia senja, para lansia umumnya mengalami penurunan fungsi tubuh, mulai dari indra penglihatan dan pendengaran hingga kemampuan mengingat dan berpikir. Berbagai masalah kesehatan pada lansia ini disebut juga sindrom geriatri.\n\nOsteoporosis atau menurunnya kepadatan tulang juga kerap terjadi pada lansia. Kondisi ini mengharuskan lansia untuk lebih berhati-hati saat bergerak agar tidak terjatuh dan mengalami cedera atau keretakan tulang.\n\nTidak hanya masalah pada tulang, menurunnya koordinasi dan keseimbangan tubuh secara alami akibat penuaan membuat para lansia juga rentan mengalami cedera dan kesulitan saat beraktivitas.Oleh karena itu, rumah aman untuk lansia diperlukan guna meminimalkan risiko terjadinya cedera.\n\nTips Membuat Rumah Aman untuk Lansia\nDengan beberapa perubahan, Anda pun bisa menciptakan kondisi rumah aman untuk lansia. Berikut ini adalah beberapa tips yang bisa Anda lakukan:\n\n1. Kamar mandi\nLantai dan bak mandi yang licin bisa membuat lansia rentan terjatuh dan mengalami cedera. Untuk menghindari hal tersebut, dinding kamar mandi sebaiknya dipasang pegangan agar lansia tidak mudah terjatuh.\n\nKamar mandi juga sebaiknya dilengkapi dengan tempat duduk khusus agar lansia bisa mandi sambil duduk. Hal ini karena kondisi lansia umumnya tidak lagi mampu berdiri terlalu lama. Letakkan juga keset dan alas kaki antislip di lantai sebelum memasuki kamar mandi.\n\n2. Ruang keluarga dan kamar tidur\nRuang keluarga dan kamar tidur biasanya dilengkapi dengan berbagai perabot rumah tangga, seperti televisi, meja, dan kursi. Sebisa mungkin pastikan perabot tersebut berada di tempat yang jauh dari jangkauan gerak lansia.\n\n3. Dapur\nRumah yang aman untuk lansia juga harus memiliki dapur yang telah dirancang khusus untuk lansia. Untuk penerangan, Anda dianjurkan menjaga ruang dapur tetap terang dengan memasangkan lampu atau pencahayaan yang baik.\n\nPastikan pula lansia bisa mengambil peralatan makan yang bisa digunakannya dengan mudah, sehingga ia tidak perlu menggunakan bangku atau tangga untuk mengambilnya.\n\nMenciptakan rumah yang aman untuk lansia memang tidak mudah, karena Anda butuh waktu untuk memahami betul kebutuhan apa saja yang diperlukan olehnya. Jadi, jangan ragu untuk berkonsultasi dengan dokter jika Anda mengalami kesulitan dalam menciptakan rumah aman bagi lansia.\n\nDokter akan memberikan pengarahan kepada Anda terkait hal-hal apa saja yang perlu dilakukan agar lansia bisa hidup dengan aman dan nyaman di rumah.</string>
</resources>