<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_dokter"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_namaDokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_item_dokter"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:textColor="@color/ijo"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/NamaKamar"/>

        <TextView
            android:id="@+id/tv_tersedia"
            android:layout_width="211dp"
            android:layout_height="30dp"
            android:layout_below="@id/tv_namaDokter"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textSize="18sp"
            android:textColor="@color/ijo"
            tools:text="@string/Tersedia" />


        <TextView
            android:id="@+id/tv_terpakai"
            android:layout_width="199dp"
            android:layout_height="36dp"
            android:layout_below="@+id/tv_tersedia"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/ijo"
            android:textSize="18sp"
            tools:text="@string/Terpakai" />

        <TextView
            android:id="@+id/tv_hargakamar"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_namaDokter"
            android:layout_marginStart="66dp"
            android:layout_marginLeft="66dp"
            android:layout_marginTop="113dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:background="@drawable/btnpesan"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="5"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textSize="20dp"
            tools:text="@string/HargaKamar" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>