<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="166dp"
            android:layout_height="178dp"
            android:layout_alignParentStart="true"

            android:layout_marginTop="60dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="88dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_item_jadwal"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/title"
            android:layout_width="207dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"


            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/image"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_alamat"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0"
            tools:text="@string/rumahsakit" />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="203dp"
            android:layout_height="111dp"
            android:layout_below="@id/title"
            android:layout_marginStart="9dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="14dp"
            android:layout_toEndOf="@id/image"
            android:layout_toRightOf="@id/image"
            android:textSize="18sp"
            android:textColor="@color/alamatrs"
            card_view:layout_constraintBottom_toTopOf="@+id/tv_item_jadwal"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/alamat" />

        <TextView
            android:id="@+id/tv_item_jadwal"
            android:layout_width="72dp"
            android:layout_height="20dp"


            android:layout_marginEnd="2dp"
            android:drawableStart="@drawable/marker_pin_rs"
            android:text="@string/km"
            android:textColor="@color/kilometer"
            android:textSize="17sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/tv_rating"
            card_view:layout_constraintStart_toEndOf="@+id/image"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_alamat" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="133dp"
            android:layout_height="21dp"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:drawableStart="@drawable/bintang"
            android:text="@string/rating"
            android:textColor="@color/alamatrs"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tv_item_jadwal"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_alamat"
            card_view:layout_constraintVertical_bias="0.437" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>