<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="385dp"
        android:layout_height="257dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_dokter"
            android:layout_width="150dp"
            android:layout_height="250dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_namaDokter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/img_item_dokter"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:textColor="@color/warnaJam"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/tv_spesialis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="99dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/ijo"
            android:textSize="24sp"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_harga"
            android:layout_width="193dp"
            android:layout_height="31dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="68dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/harga" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>