<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="403dp"
        android:layout_height="263dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_dokter_konsultasi"
            android:layout_width="152dp"
            android:layout_height="196dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/zakky" />

        <TextView
            android:id="@+id/tv_namaDokterKonsultasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"

            android:layout_marginTop="9dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_dokter_konsultasi"
            android:layout_toRightOf="@id/img_dokter_konsultasi"
            android:text="@string/heroes_name"
            android:textColor="@color/warnaJam"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_spesialisKonsultasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="67dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_dokter_konsultasi"
            android:layout_toRightOf="@id/img_dokter_konsultasi"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/description"
            android:textColor="@color/ijo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_harikonsul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="103dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_dokter_konsultasi"
            android:layout_toRightOf="@id/img_dokter_konsultasi"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="hari"
            android:textColor="@color/ijo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_hargaDokterKonsultasi"
            android:layout_width="193dp"
            android:layout_height="31dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="70dp"
            android:layout_toEndOf="@id/img_dokter_konsultasi"
            android:layout_toRightOf="@id/img_dokter_konsultasi"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/harga"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_lamakerjaDokter"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="39dp"
            android:drawableLeft="@drawable/ic_lamabekerja"
            android:ellipsize="end"

            android:gravity="right"
            android:maxLines="5"
            android:paddingStart="5dp"
            android:text="4 Tahun"
            android:textColor="@color/ijo"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_MulaiKonsultasi"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="62dp"
            android:layout_marginLeft="75dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="-2dp"
            android:layout_toEndOf="@+id/img_dokter_konsultasi"
            android:background="@drawable/btnpesan"
            android:drawableLeft="@drawable/jwdjam"            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="5"
            android:paddingLeft="5dp"
            android:text="@string/jam"
            android:textColor="@color/white"
            android:textSize="22dp" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>