<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_dokter"
            android:layout_width="149dp"
            android:layout_height="194dp"
            android:layout_marginBottom="4dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:textColor="@color/ijo"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:text="kategori" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_below="@id/tv_item_kategori"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:textColor="@color/warnaJam"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_name"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/ijo"
            android:textSize="24sp"
            tools:text="@string/description" />

        <TextView
            android:id="@+id/tv_item_jadwal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_description"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:ellipsize="end"
            android:maxLines="5"
            android:textColor="@color/ijo"
            android:textSize="23sp"
            tools:text="@string/jadwal" />

        <TextView
            android:id="@+id/tv_item_jam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_jadwal"
            android:layout_marginStart="78dp"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="21dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_item_dokter"
            android:layout_toRightOf="@id/img_item_dokter"
            android:background="@drawable/btnpesan"
            android:drawableLeft="@drawable/jwdjam"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="5"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:text="@string/jam" />

        <LinearLayout
            android:paddingVertical="16dp"
            android:layout_below="@id/tv_item_jam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_batalkan_janji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:layout_alignParentStart="true"
                android:background="@drawable/btn_pesanbatal"
                android:text="Batalkan Janji"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"/>

            <Button
                android:layout_marginHorizontal="8dp"
                android:id="@+id/btn_Atur_ulang_jadwal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:textSize="17sp"

                android:background="@drawable/btn_atur_ulangjadwal"
                android:text="Atur ulang jadwal"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>